20150227: Version 3.2.3 tested in CentOS 4
	* video_frame_free(): prototype modified to clear the EZFRM pointer.
	Otherwise the binding mode would've found the dereference pointers.

20150226: Version 3.2.3 Concept verified
	* ezthumb.c: revoke the original double-decoding-frame plan.
	The double-decoding-frame could not work because ffmpeg reuses the 
	picture buffer even allocated more than one AVFrame structure.
	The fix is allocating my own picture buffer. Once a proper frame
	has been decoded, it will be moved into the picture buffer for
	future reference.
	
20150115: Version 3.2.3
	* ezthumb.c: use video_decode_valided() instead of video_decode_next()
	in most cases. The video_decode_next() still have a chance to decode
	damaged picture while I-Packet turned out to be P-Frame.

20150114:
	I've sicked in searching and reviewing ffmpeg versions to decide
	the proper APIs so using a small script file to detect them.
	* mkconfig.sh: test the ffmpeg APIs then output a configure header
	* conftest.c: support file to test the ffmpeg APIs

20150109: Version 3.2.2
	* eziup.c: Improved UI display.
	* libcsoup: Fixed a bug that failed to read file over 2GB
	* ezthumb.c: Fixed the AR correction issue.

20140830: Version 3.2.1
	* libcsoup: updated to 0.8.1. Ezthumb applies the new debug scheme.

20140512: Pre Version 3.2.0
	* external: integrated external source codes into ezthumb to make
	them consistent and easy to maintain.
	* libcsoup: updated to 0.5.0
	* eziup.c: fully migrate to iup.
	* ezthumb.c: support av_frame_alloc() if avcodec is higher than 53.6.0

20131009: Version 3.0.4
	* libcsoup: following up libcsoup 0.2.2, which fixed a problem by 
	opening	files with the sharing mode in Win32 to get the file size. 
	The test harness was that running ezthumb while playing the same video
	by mediaplayer. Without the fix it would put ezthumb into full scan 
	mode.

20130926: Version 3.0.3
	* ezthumb.c: previous fix doesn't work well so make an update
