@@ -1,12 +1,10 @@
 TODO List
 =========
 *) Test 3.2.3 core in different linux version
-*) PTS in higher ffmpeg
-*) GUI issue in CentOS5
-*) Update the GUI
+*) More test cases for bind mode
 *) Integrating recent ffmpeg in Win32 version
 *) Windows installer
-*) More test cases for bind mode
+*) Update the GUI
 
 
 DO NOT FIX
