@@ -74,6 +74,18 @@ int main(void)
 #ifdef	TEST_GD_USE_FONTCONFIG
 	gdFTUseFontConfig(1);
 #endif
+#ifdef	TEST_AVFRAME_BEST_EFFORT_TS
+	{
+		AVFrame	frame;
+		frame.best_effort_timestamp = 0;
+	}
+#endif
+#ifdef	TEST_AVFRAME_PKT_PTS
+	{
+		AVFrame	frame;
+		frame.pkt_pts = 0;
+	}
+#endif
 	return 0;
 }
 
